BTWCT-11739-regression-order-and-quote-details-page-spacing-issues Minor styling change to add margin between Quote and Order Items

--- a/waters-aem-frontend/src/styles/order-details.scss
+++ b/waters-aem-frontend/src/styles/order-details.scss
@@ -350,6 +350,7 @@
                     padding: $space-m $space-m $space-xs $space-m;
                     width: 100%;
                     clear: both;
+                    margin-bottom: $space-xs;
                     display: inline-block;
                     min-height: 185px;
                 }
